feat: query and write (#1)